--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minecraft-dailies-server",
   "version": "1.0.0",
   "description": "Serves up fresh Minecraft quests daily.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/pandapaul/minecraft-dailies-server/issues"
   },
-  "homepage": "https://github.com/pandapaul/minecraft-dailies-server#readme"
+  "homepage": "https://github.com/pandapaul/minecraft-dailies-server#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  }
 }
