adding in the chance library. yay for randoms! my favorite :)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pandapaul/minecraft-dailies-server#readme",
   "dependencies": {
+    "chance": "^1.0.1",
     "express": "^4.13.4"
   }
 }
