--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chance": "^1.0.1",
     "express": "^4.13.4",
-    "mongoose": "^4.4.14"
+    "mongoose": "^4.4.14",
+    "yggdrasil": "^0.1.0"
   }
 }
