--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Serves up fresh Minecraft quests daily.",
   "main": "server.js",
   "scripts": {
+    "debug": "node debug server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/pandapaul/minecraft-dailies-server#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "chance": "^1.0.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.14",
