--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "debug": "node debug server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "document": "apidoc -i ./routes -o ./static/docs"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
     "express": "^4.13.4",
     "mongoose": "^4.4.14",
     "yggdrasil": "^0.1.0"
+  },
+  "devDependencies": {
+    "apidoc": "^0.16.1"
   }
 }
