--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "chance": "^1.0.1",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.13.4",
     "mongoose": "^4.4.14",
     "yggdrasil": "^0.1.0"
