--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "escape-string-regexp": "^1.0.5",
     "express": "^4.13.4",
     "mongoose": "^4.4.14",
+    "socket.io": "^1.4.8",
     "yggdrasil": "^0.1.0"
   },
   "devDependencies": {
