--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.13.4",
     "mongoose": "^4.4.14",
     "socket.io": "^1.4.8",
-    "yggdrasil": "^0.1.0"
+    "yggdrasil": "^0.1.0",
+    "minecraft-dailies-ui": "./static"
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
